修改openFeign版本号

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.boot.version>2.2.2.RELEASE</spring.boot.version>
         <spring.cloud.alibaba.version>2.2.1.RELEASE</spring.cloud.alibaba.version>
-        <spring.cloud.openfeign.version>2.2.1.RELEASE</spring.cloud.openfeign.version>
+        <spring.cloud.openfeign.version>2.2.2.RELEASE</spring.cloud.openfeign.version>
         <junit.version>4.12</junit.version>
         <log4j.version>1.2.17</log4j.version>
         <lombok.version>1.16.18</lombok.version>
@@ -139,6 +139,10 @@
             <artifactId>druid</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
         <!-- web 支持-->
         <dependency>
