--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
         <log4j.version>1.2.17</log4j.version>
         <lombok.version>1.18.0</lombok.version>
         <mysql.version>8.0.18</mysql.version>
-        <druid.version>1.1.16</druid.version>
-        <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
+        <druid.version>1.2.1</druid.version>
+        <mybatis.spring.boot.version>2.1.2</mybatis.spring.boot.version>
         <hutool.util.version>5.1.0</hutool.util.version>
         <fastjson.version>1.2.75</fastjson.version>
         <swagger2.version>2.9.2</swagger2.version>
@@ -70,6 +70,11 @@
             <dependency>
                 <groupId>com.cca</groupId>
                 <artifactId>bean</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.cca</groupId>
+                <artifactId>web</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
 
@@ -162,6 +167,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <!--mybatis-->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
