--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,12 @@
         <druid.version>1.2.1</druid.version>
         <mybatis.spring.boot.version>2.1.2</mybatis.spring.boot.version>
         <hutool.util.version>5.1.0</hutool.util.version>
+        <websocket.version>1.3.5</websocket.version>
+        <oshi.version>5.7.2</oshi.version>
         <fastjson.version>1.2.75</fastjson.version>
         <swagger2.version>2.9.2</swagger2.version>
         <swagger.bootstrap.ui.version>1.9.6</swagger.bootstrap.ui.version>
+        <velocity.version>1.7</velocity.version>
     </properties>
 
     <dependencyManagement>
@@ -139,6 +142,18 @@
                 <version>${hutool.util.version}</version>
             </dependency>
 
+            <!--websocket-->
+            <dependency>
+                <groupId>org.java-websocket</groupId>
+                <artifactId>Java-WebSocket</artifactId>
+                <version>${websocket.version}</version>
+            </dependency>
+            <!--oshi 监控-->
+            <dependency>
+                <groupId>com.github.oshi</groupId>
+                <artifactId>oshi-core</artifactId>
+                <version>${oshi.version}</version>
+            </dependency>
             <!-- swagger -->
             <dependency>
                 <groupId>io.springfox</groupId>
@@ -150,6 +165,12 @@
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>swagger-bootstrap-ui</artifactId>
                 <version>${swagger.bootstrap.ui.version}</version>
+            </dependency>
+            <!--velocity代码生成使用模板 -->
+            <dependency>
+                <groupId>org.apache.velocity</groupId>
+                <artifactId>velocity</artifactId>
+                <version>${velocity.version}</version>
             </dependency>
 
         </dependencies>
