增加example，测试和示例项目，方便测试

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>core</module>
         <module>web</module>
         <module>bean</module>
+        <module>example</module>
     </modules>
     <packaging>pom</packaging>
 
