--- a/example/pom.xml
+++ b/example/pom.xml
@@ -23,6 +23,11 @@
             <artifactId>web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
