--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>web</module>
         <module>bean</module>
         <module>example</module>
+        <module>flow</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -81,6 +82,11 @@
             <dependency>
                 <groupId>com.cca</groupId>
                 <artifactId>web</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>com.cca</groupId>
+                <artifactId>flow</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
 
