增加异常处理，增加流程节点事务处理

--- a/flow/pom.xml
+++ b/flow/pom.xml
@@ -12,5 +12,13 @@
     <groupId>io.boncray</groupId>
     <artifactId>flow</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.boncray</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
+
+
+    </dependencies>
 
 </project>
