增加基于redis实现的，幂等性注解，及其处理

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -18,11 +18,19 @@
             <artifactId>bean</artifactId>
         </dependency>
 
+        <!-- junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
 
+        <!-- redis -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- websocket -->
         <dependency>
             <groupId>org.java-websocket</groupId>
             <artifactId>Java-WebSocket</artifactId>
@@ -33,11 +41,13 @@
             <artifactId>commons-io</artifactId>
         </dependency>
 
+        <!-- proxy -->
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
         </dependency>
 
+        <!-- 面向切面编程 -->
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
