--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <lombok.version>1.18.0</lombok.version>
         <mysql.version>8.0.18</mysql.version>
         <druid.version>1.2.1</druid.version>
+        <redison.version>3.13.0</redison.version>
         <mybatis.spring.boot.version>2.1.2</mybatis.spring.boot.version>
         <hutool.util.version>5.1.0</hutool.util.version>
         <websocket.version>1.3.5</websocket.version>
@@ -101,6 +102,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>${redison.version}</version>
             </dependency>
 
             <!-- mybatis -->
