--- a/pom.xml
+++ b/pom.xml
@@ -286,12 +286,12 @@
 
     <distributionManagement>
         <repository>
-            <id>releases</id>
+            <id>rdc_releases</id>
             <name>release repository</name>
             <url>http://101.34.35.72:8081/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
-            <id>snapshots</id>
+            <id>rdc_snapshots</id>
             <name>snapshot repository</name>
             <url>http://101.34.35.72:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
