--- a/logback-starter/pom.xml
+++ b/logback-starter/pom.xml
@@ -13,6 +13,11 @@
     <artifactId>logback-starter</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
