--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <commons-io.version>2.8.0</commons-io.version>
         <cglib.version>3.3.0</cglib.version>
         <expiringmap.version>0.5.8</expiringmap.version>
+        <ttl-thread-local.version>2.12.1</ttl-thread-local.version>
     </properties>
 
     <dependencyManagement>
@@ -104,6 +105,13 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+
+            <!-- ttl-thread-local -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>transmittable-thread-local</artifactId>
+                <version>${ttl-thread-local.version}</version>
             </dependency>
 
             <dependency>
