--- a/web/pom.xml
+++ b/web/pom.xml
@@ -23,6 +23,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- druid 数据源-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+
+
         <!-- swagger2 -->
         <dependency>
             <groupId>io.springfox</groupId>
