--- a/core/pom.xml
+++ b/core/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>expiringmap</artifactId>
         </dependency>
 
+        <!--mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- 性能监控，获取硬件和进程运行时信息 -->
         <dependency>
             <groupId>com.github.oshi</groupId>
