fix:bug todo: redis自动装配问题(目前依赖core就必须配置redis)

--- a/logback-starter/pom.xml
+++ b/logback-starter/pom.xml
@@ -29,12 +29,26 @@
             <groupId>io.boncray</groupId>
             <artifactId>cmdb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+
 
     </dependencies>
 
