--- a/flow/pom.xml
+++ b/flow/pom.xml
@@ -17,7 +17,10 @@
             <groupId>io.boncray</groupId>
             <artifactId>core</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+        </dependency>
 
     </dependencies>
 
