--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>logback-starter</module>
         <module>common</module>
         <module>cmdb</module>
+        <module>component</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -36,6 +37,7 @@
         <logback.version>1.0-SNAPSHOT</logback.version>
         <commons.version>1.0-SNAPSHOT</commons.version>
         <cmdb.version>1.0-SNAPSHOT</cmdb.version>
+        <component.version>1.0-SNAPSHOT</component.version>
         <!-- -->
         <junit.version>4.13.1</junit.version>
         <slf4j.version>1.7.25</slf4j.version>
@@ -127,7 +129,13 @@
             <dependency>
                 <groupId>io.boncray</groupId>
                 <artifactId>cmdb</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>${cmdb.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.boncray</groupId>
+                <artifactId>component</artifactId>
+                <version>${component.version}</version>
             </dependency>
 
             <!-- mysql connect -->
