修改幂等处理器本地锁过期bug，修改配置信息

--- a/example/src/main/resources/bootstrap.yml
+++ b/example/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
         register-enabled: false
       config:
         server-addr: 101.34.35.72:8848 #服务配置中心地址
-        namespace: 907b6e96-4668-4d6f-8f26-eeda563d7616
+        namespace: 71f02626-4b72-4793-aab0-291c4cfed63b
         group: DEFAULT_GROUP
         file-extension: yaml
         extension-configs:
@@ -21,7 +21,7 @@ log:
     transferChannel: MYSQL
     transferDataSource:
       username: root
-      password: root
+      password: P!UgKAa5
       url: jdbc:mysql://101.34.35.72:3306/log_center?serverTimezone=Hongkong&useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&transformedBitIsBoolean=true&autoReconnect=true&failOverReadOnly=false
       driverClassName: com.mysql.cj.jdbc.Driver
     transferStrategy:
