--- a/bean/pom.xml
+++ b/bean/pom.xml
@@ -12,10 +12,10 @@
     <artifactId>bean</artifactId>
 
     <dependencies>
-        <!-- swagger -->
+        <!-- knife4j接口文档 start -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
 
 
