--- a/example/src/main/resources/bootstrap.yml
+++ b/example/src/main/resources/bootstrap.yml
@@ -18,7 +18,7 @@ spring:
 log:
   manager:
     collectEnabled: true
-    transferChannel: MYSQL
+    transferChannel: none
     transferDataSource:
       username: root
       password: P!UgKAa5
