--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,7 @@
         <websocket.version>1.3.5</websocket.version>
         <oshi.version>5.7.2</oshi.version>
         <fastjson.version>1.2.75</fastjson.version>
-        <swagger2.version>2.9.2</swagger2.version>
-        <swagger.bootstrap.ui.version>1.9.6</swagger.bootstrap.ui.version>
+        <knife4j-swagger.version>2.0.4</knife4j-swagger.version>
         <velocity.version>1.7</velocity.version>
         <commons-io.version>2.8.0</commons-io.version>
         <cglib.version>3.3.0</cglib.version>
@@ -279,17 +278,11 @@
                 <artifactId>oshi-core</artifactId>
                 <version>${oshi.version}</version>
             </dependency>
-            <!-- swagger -->
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger2</artifactId>
-                <version>${swagger2.version}</version>
-            </dependency>
-            <!-- swagger ui -->
+            <!-- swagger knife4j接口文档 start -->
             <dependency>
                 <groupId>com.github.xiaoymin</groupId>
-                <artifactId>swagger-bootstrap-ui</artifactId>
-                <version>${swagger.bootstrap.ui.version}</version>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j-swagger.version}</version>
             </dependency>
             <!--velocity代码生成使用模板 -->
             <dependency>
