--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <druid.version>1.2.1</druid.version>
         <redison.version>3.13.0</redison.version>
         <mybatis.spring.boot.version>2.1.2</mybatis.spring.boot.version>
+        <mybatis.version>3.5.4</mybatis.version>
         <hutool.util.version>5.1.0</hutool.util.version>
         <websocket.version>1.3.5</websocket.version>
         <oshi.version>5.7.2</oshi.version>
@@ -168,6 +169,12 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.spring.boot.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${mybatis.version}</version>
             </dependency>
 
             <!-- fastjson -->
