修改代码生成器模板

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- druid 数据源-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
 
         <!--velocity代码生成使用模板 -->
         <dependency>
