--- a/cmdb/pom.xml
+++ b/cmdb/pom.xml
@@ -18,6 +18,11 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>io.boncray</groupId>
+            <artifactId>bean</artifactId>
+        </dependency>
+
         <!-- mybatis -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
