--- a/flow/pom.xml
+++ b/flow/pom.xml
@@ -17,6 +17,12 @@
             <groupId>io.boncray</groupId>
             <artifactId>core</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.boncray</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
